# sortings

./: .clang-format  .gitignore  CMakeLists.txt  DefaultComparators.h  Person.h  PersonComparators.cpp  PersonComparators.h  README.md  filesHelper.h  heapSort.h  iSorter.h  insertionSort.h  main.cpp  quickSort.h  swap.h
UI/: mainWindow.cpp  mainWindow.h  sortWindow.cpp  sortWindow.h  testWindow.cpp  testWindow.h
tests/: filesHelper.cpp  filesHelper.h  heapSortTest.cpp  heapSortTest.h  quickSortTest.cpp  quickSortTest.h
